--- a/ACNH-Turnips-Fortuneteller.csproj
+++ b/ACNH-Turnips-Fortuneteller.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AF58AFF0-AD0D-46BB-8477-44F992372133}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ACNH_Turnips_Fortuneteller</RootNamespace>
-    <AssemblyName>ACNH-Turnips-Fortuneteller</AssemblyName>
+    <AssemblyName>ACNH Turnips Fortune Teller</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,25 +65,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BuyPricesControl.cs">
+    <Compile Include="UI\BuyPricesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="BuyPricesControl.Designer.cs">
+    <Compile Include="UI\BuyPricesControl.Designer.cs">
       <DependentUpon>BuyPricesControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="UI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="UI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SaveGameService.cs" />
-    <EmbeddedResource Include="BuyPricesControl.resx">
+    <EmbeddedResource Include="UI\BuyPricesControl.resx">
       <DependentUpon>BuyPricesControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="UI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -125,5 +125,6 @@
       <Name>MyHorizons</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
