--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "MyHorizons"]
-	path = MyHorizons
-	url = git@github.com:igromanru/MyHorizons.git
+[submodule "NHSE"]
+	path = NHSE
+	url = git@github.com:kwsch/NHSE.git
