--- a/nlog.config
+++ b/nlog.config
@@ -5,14 +5,13 @@
       autoReload="true"
       internalLogFile="turnips-fortuneteller-internal.log"
       internalLogLevel="Warn">
+	<variable name="defaultLayout" value="${longdate}|${level:uppercase=true}|${callsite:includeNamespace=false}: ${message:withException=true}" />
 
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file -->
-    <target xsi:type="File" name="fileTarget" fileName="turnips-fortuneteller.log"
-            layout="${longdate} ${level:uppercase=true} ${message} ${exception:format=tostring}" />
-    <target xsi:type="ColoredConsole" name="consoleTarget" useDefaultRowHighlightingRules="false"
-            layout="${longdate} ${level:uppercase=true} ${message} ${exception:format=tostring}" >
+    <target xsi:type="File" name="fileTarget" fileName="turnips-fortuneteller.log" layout="${defaultLayout}" />
+    <target xsi:type="ColoredConsole" name="consoleTarget" useDefaultRowHighlightingRules="false" layout="${defaultLayout}" >
       <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
